Additional fixes (#9)
* Make git server work

* Make template functionality work

Co-authored-by: Gieted <gieted@proton.me>